# control-plane-kit

./: .dockerignore  .gitignore  AGENTS.md  DEFINITION_OF_DONE.md  DESIGN.md  DOCS.md  Dockerfile  LICENSE  README.md  SECURITY.md  SERVER_PRODUCT_ROLLOUT.md  activity-seeded-live-test.sh  build-parity-manifest.sh  classify-reference-laws.sh  configuration-live-test.sh  coredns-live-test.sh  differential-live-test.sh  discovery-live-test.sh  docker-compose.read-demo.yml  docker-compose.test.yml  gate-d-live-test.sh  gate-f-live-test.sh  generated-hello-live-test.sh  live-test.sh  opentelemetry-live-test.sh  packaging-test.sh  pyproject.toml  reference-inventory.sh  reference-test.sh  secret-live-test.sh  service-infrastructure-live-test.sh  tcp-switch-live-test.sh  test.sh  transport-live-test.sh  validate-parity.sh  validate-reference-demos.sh  verification-live-test.sh  webhook-live-test.sh
control-plane-kit-core/: AGENTS.md  README.md  pyproject.toml  test.sh
control-plane-kit-core/docs/: EXTRACTION.md  EXTRACT_D_TOPOLOGY.md
control-plane-kit-core/examples/: external-product-descriptor.md
control-plane-kit-core/src/control_plane_kit_core/: __init__.py  algebra.py  capabilities.py  configuration.py  configuration_rendering.py  control_contracts.py  policies.py  probe_intents.py  products.py  runtime_authority.py  runtime_effects.py  types.py  verification.py
control-plane-kit-core/src/control_plane_kit_core/operations/: __init__.py  commands.py  execution.py  handoff.py  http.py  lifecycle.py  mcp.py  parity.py  persistence.py  process.py  projections.py  services.py  transactions.py
control-plane-kit-core/src/control_plane_kit_core/planning/: __init__.py  activity_plan.py  codec.py  compiler.py  recovery.py  saga.py  scenarios.py
control-plane-kit-core/src/control_plane_kit_core/topology/: __init__.py  changes.py  codec.py  compiler.py  diff.py  graph.py  validation.py
control-plane-kit-core/tests/: test_activity_plan.py  test_activity_plan_codec.py  test_activity_plan_compiler.py  test_adapter_parity_contract.py  test_authorization_history_parity_contract.py  test_command_parity_contract.py  test_command_workflow_contract.py  test_compensation_planning.py  test_configuration_artifacts.py  test_container_server_product.py  test_control_contracts.py  test_control_routes.py  test_cpk_server_entrypoint_handoff.py  test_deployment_program_boundary.py  test_environment_secrets.py  test_execution_coordinator_contract.py  test_execution_lifecycle_contract.py  test_external_product_fixture.py  test_extract_d_closeout.py  test_extract_d_topology.py  test_graph_codec.py  test_graph_diff.py  test_graph_validation.py  test_http_api_contract.py  test_kernel_pipeline.py  test_mcp_streamable_http_contract.py  test_milestone_closeout.py  test_oci_image_reference.py  test_package_boundary.py  test_persistence_boundary_contract.py  test_planning_scenarios.py  test_policies.py  test_probe_intents.py  test_process_operational_contract.py  test_product_catalog.py  test_product_descriptor.py  test_product_descriptor_hardening.py  test_product_identity.py  test_product_instantiation.py  test_product_pipeline_propagation.py  (+12 more)
control-plane-kit-core/tests/fixtures/external-products/proxy/: product.cpk.json
control-plane-kit-operations/: AGENTS.md  README.md  pyproject.toml  test.sh
control-plane-kit-operations/src/control_plane_kit_operations/: __init__.py  activity_journal.py  admission.py  advancement.py  approvals.py  coordinator.py  cpk_server.py  docker_realization.py  foundation.py  graph_authoring.py  lifecycle.py  planning.py  products.py  read_services.py  records.py  runtime_effects.py  workflows.py  workspaces.py
control-plane-kit-operations/src/control_plane_kit_operations/postgres/: __init__.py  activity_history.py  execution.py  graph_store.py  image_pull_authority_store.py  observed_state.py  product_store.py  schema.py  stores.py  unit_of_work.py
control-plane-kit-operations/tests/: test_approvals.py  test_cpk_server_adapters.py  test_current_graph_advancement.py  test_docker_realization.py  test_execution_admission.py  test_execution_coordinator.py  test_graph_authoring.py  test_package_boundary.py  test_planning_commands.py  test_postgres_schema.py  test_read_services.py  test_registered_products.py  test_run_lifecycle.py  test_runtime_effect_translation.py  test_runtime_interpreter_dispatcher.py  test_scaffold.py  test_unit_of_work.py  test_workflows.py  test_workspace_graph_stores.py
control_plane_kit/: __init__.py  _optional.py  activity_plan.py  activity_plan_codec.py  activity_plan_compiler.py  algebra.py  blocks.py  capabilities.py  cli.py  compiler.py  configuration.py  configuration_rendering.py  contracts.py  control_routes.py  discovery.py  docker_runtime.py  environment.py  graph.py  graph_changes.py  graph_codec.py  graph_diff.py  idempotency.py  implementations.py  lifecycle.py  mcp_read.py  planner.py  recovery.py  runtimes.py  secrets.py  types.py  validation.py  verification.py
docs/: ACTIVITY_PLANNING.md  CONNECTION_PROTOCOL.md  CONTROL_PLANE_LANGUAGE.md  CONTROL_PLANE_LANGUAGE_STUDY_GUIDE.md  CONTROL_PLANE_READ_INTERFACES.md  DEPLOY_PROGRAM.md  GENERATED_HELLO_GRAPHS.md  HTTP_BLOCK_COMPOSITIONS.md  OPERATING_MODEL.md  PACKAGE_SERVER_CATALOG.md  POSTGRES_UNIT_OF_WORK.md  READ_INTERFACES.md  root-import-surfaces.md
(+588 files in other folders)
