[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "control-plane-kit"
version = "0.2.0"
description = "A small algebra for deployment control planes, socket wiring, and runtime interpretation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Control Plane Kit Contributors"}]
keywords = ["deployment", "control-plane", "graph", "topology", "sockets"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/OpenJ92/control-plane-kit"

[tool.setuptools.packages.find]
where = ["."]
include = ["control_plane_kit*"]
